clear_all_select

--- a/android_app/app/src/main/res/xml/preferences.xml
+++ b/android_app/app/src/main/res/xml/preferences.xml
@@ -43,7 +43,7 @@
 
         <PreferenceScreen
             android:key="vpn_clear_all_selection"
-            android:title="Clear all selection" />
+            android:title="@string/clear_all_select" />
 
     </PreferenceCategory>
 </PreferenceScreen>
